# task-manager

./: app.py  pyproject.toml  testing.html
instance/: database.db
static/: styles.css  styles.css.map  styles.scss
templates/: base.html  edit.html  index.html
