[tool.poetry]
name = "todo app"
version = "0.1.0"
description = "this apps aim to develop a todo app"
authors = ["Abdellahitech <abdellahi.mezid@hrflow.ai>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"
jinja2 = "^3.1.4"
flask-scss = "^0.5"
flask-sqlalchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
